--- a/Odevler/odev-2.ipynb
+++ b/Odevler/odev-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "206d5e30",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maaşınız 45000 ve üstü. Yeni maaşınız: 32060.0\n"
+      "Maaşınız 25000 altında. Yeni maaşınız: 11700.0\n"
      ]
     }
    ],
    "source": [
     "maas = int(input(\"Maaşınızı girin: \"))\n",
-    "if maas < 10000:\n",
+    "if maas <= 10000:\n",
     "    maas = maas - (maas * 0.05)\n",
     "    yeni_maas = maas\n",
     "    print(\"Maaşınız 10000 altında. Yeni maaşınız:\", yeni_maas)\n",
-    "elif maas < 25000:\n",
+    "elif 10000 < maas <= 25000:\n",
     "    maas = maas - (maas * 0.10)\n",
     "    yeni_maas = maas\n",
     "    print(\"Maaşınız 25000 altında. Yeni maaşınız:\", yeni_maas)\n",
-    "elif maas < 45000:\n",
+    "elif 25000 < maas <= 45000:\n",
     "    maas = maas - (maas * 0.25)\n",
     "    yeni_maas = maas\n",
     "    print(\"Maaşınız 45000 altında. Yeni maaşınız:\", yeni_maas)\n",
